--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,14 @@ body{
     font-family: sans-serif;
 }
 
+h1{
+    font-size: 44px;
+}
+
+p{
+    font-size: 18px;
+}
+
 header{
     height: 600px;
     background-color: dodgerblue;
@@ -12,12 +20,71 @@ header{
     background-image: url("img/jumbo.png");
 }
 
+.container{
+    width: 1200px;
+    margin: 0 auto;
+}
+
 nav{
-    height: 80px;
-    border: 1px solid white;
+    padding: 30px 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.link{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    line-height: 40px;
+    vertical-align: middle;
+}
+
+.logo{
+    width: 25%;
+}
+
+.accedi{
+    width: 25%;
+    text-align: right;
+    line-height: 40px;
+    vertical-align: middle;
 }
 
 a{
     color: white;
     text-decoration: none;
+}
+
+.accedi a{
+    color: black;
+    background-color: white;
+    padding: 8px 14px;
+    border-radius: 30px;
+}
+
+.jumbotron{
+    min-height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.jumbotron .container{
+    width: 60%;
+}
+
+.buttons{
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.buttons a{
+    color: white;
+    background-color: black;
+    font-size: 22px;
+    padding: 15px 25px;
+    border-radius: 40px;
+    margin: 0 10px;
 }
