--- a/css/style.css
+++ b/css/style.css
@@ -147,3 +147,78 @@ button{
     display: flex;
     justify-content: center;
 }
+
+footer{
+    background-color: rgb(43, 44, 46);
+    padding: 80px 0;
+}
+
+.top-footer{
+    display: flex;
+    margin-bottom: 50px;
+}
+
+.social{
+    width: 30%;
+    padding-right: 50px;
+}
+
+.social h2{
+    color: rgb(114,137,218);
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+span{
+    color: white;
+    margin-left: 10px;
+}
+    
+
+.social img{
+    width: 30px;
+}
+
+.social p{
+    color: white;
+}
+
+.footer-menu{
+    width: 70%;
+    display: flex;
+}
+
+.list{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.list h3{
+    color: rgb(114,137,218);
+}
+
+ul{
+    list-style-type: none;
+}
+
+.list a{
+    line-height: 30px;
+}
+
+hr{
+    color: rgb(158, 186, 245);
+}
+
+.bottom-footer{
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.registrati a{
+    background-color: rgb(158, 186, 245);
+    padding: 10px 15px;
+    border-radius: 20px;
+}
