--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ p{
 
 header{
     height: 600px;
-    background-color: dodgerblue;
     color: white;
     background-image: url("../img/jumbo.png");
     background-size: cover;
@@ -89,6 +88,15 @@ a{
 .buttons a{
     color: white;
     background-color: black;
+    font-size: 22px;
+    padding: 15px 25px;
+    border-radius: 40px;
+    margin: 0 10px;
+}
+
+#download{
+    color: black;
+    background-color: white;
     font-size: 22px;
     padding: 15px 25px;
     border-radius: 40px;
@@ -225,4 +233,10 @@ hr{
 
 .social i{
     margin: 0 10px;
+}
+
+
+svg{
+    margin-bottom: -10px;
+    padding: 0;
 }
