added link underline

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,10 @@ a{
     text-decoration: none;
 }
 
+a:hover{
+    text-decoration: underline;
+}
+
 .accedi a{
     color: black;
     background-color: white;
