--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ h1{
 }
 
 h2{
-    font-size: 32px;
+    font-size: 28px;
     margin-bottom: 50px;
 }
 
@@ -60,7 +60,7 @@ a{
     text-decoration: none;
 }
 
-a:hover{
+.link a:hover, .list a:hover{
     text-decoration: underline;
 }
 
@@ -148,9 +148,17 @@ section .container{
     padding: 0 100px;
 }
 
+.stars{
+    background-image: url("../img/stars.svg");
+    background-repeat: no-repeat;
+    background-position: top;
+    width: 800px;
+    margin: 0 auto;
+}
+
 .fourth a{
     background-color: rgb(158, 186, 245);
-    font-size: 24px;
+    font-size: 20px;
     padding: 18px 30px;
     border-radius: 40px;
 }
