--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,7 @@ section .container{
 }
 
 .fourth a{
-    background-color: rgb(158, 186, 245);
+    background-color: rgb(110, 150, 234);
     font-size: 20px;
     padding: 18px 30px;
     border-radius: 40px;
@@ -252,3 +252,22 @@ svg{
     margin-bottom: -10px;
     padding: 0;
 }
+
+/* button hover */
+
+.accedi a:hover, #download:hover{
+    color: rgb(114,137,218);
+    box-shadow: 0px 10px 30px -10px rgba(0,0,0,1);
+}
+
+.buttons a:hover{
+    background-color: rgb(47, 47, 47);
+    box-shadow: 0px 10px 30px -10px rgba(0,0,0,1);
+}
+
+.button a:hover{
+    background-color: rgb(142, 173, 241);
+    box-shadow: 0px 10px 30px -10px rgba(0,0,0,1);
+}
+
+
