--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,7 @@ hr{
 }
 
 .registrati a{
-    background-color: rgb(158, 186, 245);
+    background-color: rgb(110, 150, 234);
     padding: 10px 15px;
     border-radius: 20px;
 }
@@ -265,7 +265,7 @@ svg{
     box-shadow: 0px 10px 30px -10px rgba(0,0,0,1);
 }
 
-.button a:hover{
+.button a:hover, .registrati a:hover{
     background-color: rgb(142, 173, 241);
     box-shadow: 0px 10px 30px -10px rgba(0,0,0,1);
 }
